--- a/src/main/webapp/privado/produto/listar.xhtml
+++ b/src/main/webapp/privado/produto/listar.xhtml
@@ -11,7 +11,7 @@
             <h:form id="formListagem" prependId="false">
                 <p:growl/>
                 <br></br>
-                <p:commandButton value="Novo" actionListener="#{controleProduto.novo()}"
+                <p:commandButton value="Novo produto" actionListener="#{controleProduto.novo()}"
                                  icon="pi pi-plus" update="formEdicao" process="@this"
                                  oncomplete="PF('dlg').show();"/>
                 <!-- Paginação e filtro -->
@@ -97,7 +97,8 @@
                         <p:panelGrid columns="2">
                             <p:outputLabel value="ID"/>
                             <p:inputText value="#{controleProduto.objeto.id}"
-                                         size="5" readonly="true"/>
+                                         size="5" readonly="true"
+                                         placeholder="ID"/>
                             <p:outputLabel value="Nome" for="txtNome"/>
                             <p:inputText value="#{controleProduto.objeto.nome}"
                                          id="txtNome" size="40" maxlength="100"
