--- a/src/main/webapp/privado/cliente/listar.xhtml
+++ b/src/main/webapp/privado/cliente/listar.xhtml
@@ -12,7 +12,7 @@
             <h:form id="formListagem" prependId="false">
                 <p:growl/>
                 <br></br>
-                <p:commandButton value="Novo" actionListener="#{controleCliente.novo()}"
+                <p:commandButton value="Novo cliente" actionListener="#{controleCliente.novo()}"
                                  icon="pi pi-plus" update="formEdicao" process="@this"
                                  oncomplete="PF('dlg').show();"/>
                 <!-- Paginação e filtro -->
@@ -68,11 +68,6 @@
                     <p:column headerText="CPF">
                         <p:outputLabel value="#{obj.cpf}"/>
                     </p:column>
-                    <p:column headerText="Data de Cadastro">
-                        <p:outputLabel value="#{obj.dataCad}">
-                            <f:converter converterId="converterCalendar"/>
-                        </p:outputLabel>
-                    </p:column>
                     <p:column headerText="E-mail">
                         <p:outputLabel value="#{obj.email}"/>
                     </p:column>
@@ -81,6 +76,11 @@
                     </p:column>
                     <p:column headerText="Data de Nascimento">
                         <p:outputLabel value="#{obj.dataNasc}">
+                            <f:converter converterId="converterCalendar"/>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column headerText="Data de Cadastro">
+                        <p:outputLabel value="#{obj.dataCad}">
                             <f:converter converterId="converterCalendar"/>
                         </p:outputLabel>
                     </p:column>
@@ -108,7 +108,8 @@
                         <p:panelGrid columns="2">
                             <p:outputLabel value="ID"/>
                             <p:inputText value="#{controleCliente.objeto.id}"
-                                         size="5" readonly="true"/>
+                                         size="5" readonly="true"
+                                         placeholder="ID"/>
                             <p:outputLabel value="Nome" for="txtNome"/>
                             <p:inputText value="#{controleCliente.objeto.nome}"
                                          id="txtNome" size="40" maxlength="40"
@@ -117,11 +118,6 @@
                             <p:inputText value="#{controleCliente.objeto.cpf}"
                                          id="txtCPF" size="15" maxlength="11"
                                          placeholder="Número de CPF"/>
-                            <p:outputLabel value="Data de Cadastro" for="txtDataCad"/>
-                            <p:calendar value="#{controleCliente.objeto.dataCad}"
-                                         id="txtDataCad" mask="dd/MM/yyyy" navigator="true">
-                                         <f:converter converterId="converterCalendar"/>
-                                         </p:calendar>
                             <p:outputLabel value="E-mail" for="txtEmail"/>
                             <p:inputText value="#{controleCliente.objeto.email}"
                                          id="txtEmail" size="40" maxlength="40"
@@ -131,8 +127,14 @@
                                          id="txtTelefone" size="15" maxlength="11"
                                          a:type="tel" placeholder="Telefone fixo/móvel"/>
                             <p:outputLabel value="Data de Nascimento" for="txtDataNasc"/>
+                            <p:calendar value="#{controleCliente.objeto.dataNasc}"
+                                         id="txtDataNasc" mask="dd/MM/yyyy" navigator="true"
+                                         placeholder="Data de nascimento">
+                                         <f:converter converterId="converterCalendar"/>
+                                         </p:calendar>
+                            <p:outputLabel value="Data de Cadastro" for="txtDataCad"/>
                             <p:calendar value="#{controleCliente.objeto.dataCad}"
-                                         id="txtDataNasc" mask="dd/MM/yyyy" navigator="true">
+                                         id="txtDataCad" mask="dd/MM/yyyy" readonly="true">
                                          <f:converter converterId="converterCalendar"/>
                                          </p:calendar>
                         </p:panelGrid>
